9 Mar 2010
	* added image padding in XGetImage and XPutImage (Johannes)
	* added WM_DELETE_WINDOW handling on GR_EVENT_TYPE_CLOSE_REQ for FLTK
	* add XSetTransientForHint(), XA_WM_TRANSIENT_FOR and XM_WM_NAME handling
		in XChangeProperty (Johannes)
	* fix null ptr in XConvertSelection (Johannes)
21 Feb 2010
	* fixes relating to running FLTK 1.1.10 w/NXLIB (requires mwin v0.92RC2)
	* XParseColor randomly returned incorrect colors, now works #RRRRGGGGBBBB
	* fix bug in drawing text bk color after drawing Images
	* revised default Makefile for Ubuntu 9.10 X11 fonts location
	* added fonts.alias support
24 Jan 2010 - greg@censoft.com
	* revised Makefile to allow compiling without X11 installed
	* created internal X11 directory for X11 hdrs if not present
	* added test directory with X11 test applications
	* revised Xlcint.h removed varargs.h, added stdargs.h
30 November 2007
	* ported FLTK 2.0.x (stubbed _XUnknownNativeEvent,XutfLookupString)
23 November 2007
	* change XPutImage to use new MWPF_HWPIXELVAL pixtype
	* force UseBackground true in XPutImage
	* change XFillArc/XFillArcs to add one to width/height
	* added X11_FONT_DIR3 to Makefile for X11 default TTF directory
	* added scalable font & height handling to XLoadFont with X11 fonts.dir
	* added input window handling to XCreateWindow (Giosis/Foedrowitz)
	* added BIGENDIAN option to Makefile
	* fix XCreateBitmapFromData for big endian (Giosis/Foedrowitz)
	* fix XDrawPoints past first coord (Giosis/Foedrowitz)
	* fix memory leak in XSetClipMask and XSetClipRectangles
	* rewrite XChangeProperty, never worked, implement XGetWindowProperty
	* fix XInternAtom to return above XA_LAST_PREDEFINED
14 June 2005
	* add XSetSelectionOwner,XGetSelectionOwner,XConvertSelection (Jordan)
Version 0.45 - 11 Sep 2003 - greg@censoft.com
	* added XAllocWMHints, XAllocSizeHints for FLTK 1.1.4
	* fixed 'p' entry in mwscan_to_mwkey
	* added X headers to nxlib distribution, X11 now not required to build